syntax = "proto3";

package generated;

message GetServerOutputRequest {}
message GetStatusRequest {}
message ServerCommandResponse {}

// The FlowFile service definition.
service MandyasService {
    rpc SendCommand (ServerCommandRequest) returns (ServerCommandResponse) {}
    rpc GetServerOutput (GetServerOutputRequest) returns (stream ServerOutput) {}
    rpc GetStatus (GetStatusRequest) returns (ServerStatus) {}
}

message ServerCommandRequest {
    uint64 id = 1;
    uint64 utctimestamp = 2;
    bytes command = 3;
}

message ServerOutput {
    uint64 id = 1;
    uint64 utctimestamp = 2;
    bytes content = 3;
}

message ServerStatus {
    uint64 id = 1;
    uint64 utctimestamp = 2;
    enum Status {
        FAILED = 0;
        RUNNING = 1;
    }
    Status status = 3;
}